# platform.core.telephony.phonenumber-utils

./: CMakeLists.txt  project.config
client/: CMakeLists.txt  phnc.c  phnc.h  phonenumber-utils.pc.in
common/: CMakeLists.txt  phn-common.h  phn-dbus.xml  phn-log.h
daemon/: CMakeLists.txt  org.tizen.PhonenumberUtils.dbus.conf  org.tizen.PhonenumberUtils.dbus.service.in  phnd-dbus.c  phnd-dbus.h  phnd-libphonenumber.cpp  phnd-libphonenumber.h  phnd-location.c  phnd-location.h  phnd-region-data.c  phnd-region-data.h  phnd-utils.c  phnd-utils.h  phnd.c  phnd.h
doc/: phnumber_doc.h
include/: phone_number.h  phone_number_errors.h  phone_number_types.h
packaging/: phonenumber-utils.manifest  phonenumber-utils.service  phonenumber-utils.spec
src/: phn.c  phn_common.h  phn_location.c  phn_location.h  phn_phonenumber_wrapper.cpp  phn_phonenumber_wrapper.h  phn_region_data.c  phn_region_data.h
test/: CMakeLists.txt  phn-test.c
