INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/common)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR})

SET(TEST_TARGET "${PROJECT_NAME}-test")

FILE(GLOB TEST_SRCS *.c)

pkg_check_modules(test_pkgs REQUIRED dlog)
INCLUDE_DIRECTORIES(${test_pkgs_INCLUDE_DIRS})
LINK_DIRECTORIES(${test_pkgs_LIBRARY_DIRS})

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIE")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIE")
SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--hash-style=both -pie")

ADD_EXECUTABLE(${TEST_TARGET} ${TEST_SRCS})
ADD_DEPENDENCIES(${TEST_TARGET} GENERATED_DBUS_CODE)
TARGET_LINK_LIBRARIES(${TEST_TARGET} ${test_pkgs_LIBRARIES} ${CLIENT})
INSTALL(TARGETS ${TEST_TARGET} DESTINATION bin)